feat: Add hooks, skills, commands, rules, and project agents
- Hooks: block-sensitive.py (block sensitive file access),
  post-tool-format.py (auto-format Python with Ruff)
- Skills: python-fixer, type-checker, test-runner,
  container-inspector, dependency-auditor
- Commands: gpu-status, docker-status, pr-review, commit
- Rules: python-standards, git-commits, docker-practices,
  security, research-code
- Project agents: infra-architect, research-pm, research-scientist
- Updated settings.json with permissions, hooks, sandbox config
- Updated setup.sh to symlink new directories

--- a/settings.json
+++ b/settings.json
@@ -1,5 +1,72 @@
 {
   "alwaysThinkingEnabled": true,
   "includeCoAuthoredBy": false,
-  "gitAttribution": false
+  "gitAttribution": false,
+
+  "permissions": {
+    "allow": [
+      "Bash(nvidia-smi:*)",
+      "Bash(docker:*)",
+      "Bash(docker-compose:*)",
+      "Bash(git:*)",
+      "Bash(ruff:*)",
+      "Bash(pytest:*)",
+      "Bash(pip:*)",
+      "Bash(python:*)",
+      "Read(/proc/meminfo)",
+      "Read(/proc/cpuinfo)"
+    ],
+    "deny": [
+      "Read(.env)",
+      "Read(.env.*)",
+      "Read(**/*_key)",
+      "Read(**/*_secret)",
+      "Read(**/.ssh/**)",
+      "Bash(rm -rf /)",
+      "Bash(mkfs:*)",
+      "Bash(dd if=:*)"
+    ],
+    "ask": [
+      "Bash(systemctl:*)",
+      "Bash(kill:*)",
+      "Bash(pkill:*)",
+      "Bash(reboot:*)",
+      "Bash(shutdown:*)"
+    ]
+  },
+
+  "env": {
+    "PYTHONDONTWRITEBYTECODE": "1",
+    "PYTHONUNBUFFERED": "1"
+  },
+
+  "sandbox": {
+    "enabled": true,
+    "excludedCommands": ["docker", "docker-compose", "nvidia-smi", "git"]
+  },
+
+  "hooks": {
+    "PostToolUse": [
+      {
+        "matcher": "Write|Edit",
+        "hooks": [
+          {
+            "type": "command",
+            "command": "python ~/.claude/hooks/post-tool-format.py"
+          }
+        ]
+      }
+    ],
+    "PreToolUse": [
+      {
+        "matcher": "Read|Write|Edit",
+        "hooks": [
+          {
+            "type": "command",
+            "command": "python ~/.claude/hooks/block-sensitive.py"
+          }
+        ]
+      }
+    ]
+  }
 }
