feat(08-05): update claude project wizard and .env.example
Claude project changes:
- Replace hooks.conf profile selection with individual CLAUDE_HOOK_* toggles
- Deploy block-destructive.sh to .claude/hooks/ when PreToolUse enabled
- Merge hooks.json template into settings.json for PreToolUse config
- Deploy claude-hooks.conf with individual settings
- Adjust Ruff default based on project type (off for non-Python)
- Update .dotconfigs.json to store pretooluse_enabled instead of hooks_profile

.env.example changes:
- Complete documentation of all GIT_HOOK_* variables (23 variables)
- All CLAUDE_HOOK_* variables (3 variables)
- Organized by hook type (pre-commit, commit-msg, pre-push, etc.)
- Added deprecation notice for old variable names
- Inline comments explaining each setting

--- a/.env.example
+++ b/.env.example
@@ -1,174 +1,120 @@
 # dotconfigs configuration
-# ======================
-# This file documents all available configuration keys.
-# Copy to .env and customise, or run: dotconfigs setup <plugin>
+# Copy to .env and customize for your environment
+# Re-run setup: dotconfigs setup <plugin>
 
 # ============================================================================
-# VERSION
+# GIT PLUGIN - Identity
 # ============================================================================
-# Configuration schema version — used for auto-migration between versions
-# Current version: 2.0
-DOTCONFIGS_VERSION=2.0
 
-# ============================================================================
-# CLAUDE PLUGIN
-# ============================================================================
-# Manages Claude Code configuration: settings.json, CLAUDE.md, hooks, skills
-
-# Deploy target directory (where Claude config lives)
-# Default: ~/.claude
-CLAUDE_DEPLOY_TARGET=~/.claude
-
-# Enable/disable settings.json deployment
-# Settings.json controls file permissions, command allow/deny, and hooks
-# Values: true | false
-# Default: true
-CLAUDE_SETTINGS_ENABLED=true
-
-# CLAUDE.md sections to include (space-separated list)
-# Available sections discovered from plugins/claude/templates/claude-md/
-# Examples: 01-communication 02-simplicity 03-documentation 04-git 05-code-style
-# Default: all sections enabled
-CLAUDE_MD_SECTIONS="01-communication 02-simplicity 03-documentation 04-git 05-code-style"
-
-# Claude Code hooks to deploy (space-separated list)
-# Hooks are Python scripts in plugins/claude/hooks/
-# Available: post-tool-format.py (runs Ruff on Python Write/Edit)
-# Default: all hooks enabled
-CLAUDE_HOOKS_ENABLED="post-tool-format"
-
-# Skills (custom commands) to deploy (space-separated list)
-# Skills are markdown files in plugins/claude/commands/
-# Available: commit squash-merge simplicity-check pr-review
-# Default: all skills enabled
-CLAUDE_SKILLS_ENABLED="commit squash-merge simplicity-check pr-review"
-
-# Install Get Shit Done framework
-# GSD provides project planning agents (/plan, /execute, etc.)
-# Values: true | false
-# Default: false
-CLAUDE_GSD_INSTALL=false
-
-# Git identity (deployed via Claude plugin)
-# DEPRECATED: Use GIT_USER_NAME and GIT_USER_EMAIL instead
-# These keys exist for backwards compatibility only
-CLAUDE_GIT_USER_NAME=""
-CLAUDE_GIT_USER_EMAIL=""
-
-# ============================================================================
-# GIT PLUGIN
-# ============================================================================
-# Manages Git configuration: identity, workflow, aliases, hooks
-
-# ----------------------------------------------------------------------------
-# Identity
-# ----------------------------------------------------------------------------
-
-# Global git user.name (required for commits)
+# Git user identity (applied globally)
 GIT_USER_NAME="Your Name"
-
-# Global git user.email (required for commits)
 GIT_USER_EMAIL="your.email@example.com"
 
-# ----------------------------------------------------------------------------
-# Workflow Settings
-# ----------------------------------------------------------------------------
+# ============================================================================
+# GIT PLUGIN - Workflow Settings
+# ============================================================================
 
-# Rebase on pull instead of merge
-# Values: true | false
-# Default: true
-GIT_PULL_REBASE=true
+# Core workflow settings
+GIT_PULL_REBASE=true                     # Rebase instead of merge on pull
+GIT_PUSH_DEFAULT=simple                  # Push current branch only
+GIT_FETCH_PRUNE=true                     # Auto-delete removed remote branches
+GIT_INIT_DEFAULT_BRANCH=main             # Default branch name for new repos
 
-# Push only current branch (not all matching branches)
-# Values: simple | current | matching | upstream
-# Default: simple (push current branch to upstream with same name)
-GIT_PUSH_DEFAULT=simple
+# Advanced workflow settings
+GIT_RERERE_ENABLED=false                 # Reuse recorded conflict resolutions
+GIT_DIFF_ALGORITHM=histogram             # Better diff output (optional)
+GIT_HELP_AUTOCORRECT=10                  # Auto-run typo corrections after 1s (optional)
 
-# Auto-delete remote-tracking branches when remote is deleted
-# Values: true | false
-# Default: true
-GIT_FETCH_PRUNE=true
+# ============================================================================
+# GIT PLUGIN - Aliases
+# ============================================================================
 
-# Default branch name for new repositories
-# Common values: main | master
-# Default: main
-GIT_INIT_DEFAULT_BRANCH=main
-
-# Reuse recorded conflict resolutions (git rerere)
-# Values: true | false
-# Default: false (opt-in)
-GIT_RERERE_ENABLED=false
-
-# Diff algorithm for better output
-# Values: myers | minimal | patience | histogram
-# Default: unset (uses git default 'myers')
-# Recommended: histogram (better diffs for code)
-GIT_DIFF_ALGORITHM=histogram
-
-# Auto-run typo corrections after delay
-# Value: deciseconds (10 = 1 second)
-# Default: unset (no autocorrect)
-# Example: 10 (auto-run correction after 1 second)
-GIT_HELP_AUTOCORRECT=10
-
-# ----------------------------------------------------------------------------
-# Aliases
-# ----------------------------------------------------------------------------
-
-# Enabled aliases (space-separated list)
-# Format: alias-name alias-name ...
-# Custom aliases also listed here
-# Default: unstage last lg amend undo wip
+# Space-separated list of enabled aliases
 GIT_ALIASES_ENABLED="unstage last lg amend undo wip"
 
-# Built-in alias definitions
-# Override by setting GIT_ALIAS_<NAME> with custom command
-
-# Unstage files
+# Alias definitions (defaults shown - customize if needed)
 GIT_ALIAS_UNSTAGE="reset HEAD --"
-
-# Show last commit
 GIT_ALIAS_LAST="log -1 HEAD"
-
-# Pretty log graph
 GIT_ALIAS_LG="log --oneline --graph --all --decorate"
-
-# Amend last commit without editing message
 GIT_ALIAS_AMEND="commit --amend --no-edit"
-
-# Undo last commit (keep changes unstaged)
 GIT_ALIAS_UNDO="reset HEAD~1 --mixed"
+GIT_ALIAS_WIP="commit -am 'WIP'"
 
-# Quick work-in-progress commit
-GIT_ALIAS_WIP="commit -am \"WIP\""
+# ============================================================================
+# GIT PLUGIN - Hooks Configuration
+# ============================================================================
 
-# Custom aliases
-# Add your own aliases using GIT_ALIAS_<NAME> format
-# Example:
-# GIT_ALIAS_FIXUP="commit --fixup HEAD"
-# (Remember to add 'fixup' to GIT_ALIASES_ENABLED)
+# Hooks scope
+GIT_HOOKS_SCOPE=project                  # Deploy per-project or global
+GIT_HOOK_CONFIG_PATH=.githooks/config    # Config file location (project scope only)
 
 # ----------------------------------------------------------------------------
-# Hooks
+# Pre-commit hook settings
 # ----------------------------------------------------------------------------
+GIT_HOOK_PRE_COMMIT_ENABLED=true         # Enable pre-commit hook
+GIT_HOOK_SECRETS_CHECK=true              # Block commits with secrets
+GIT_HOOK_LARGE_FILE_CHECK=true           # Warn on large files
+GIT_HOOK_LARGE_FILE_THRESHOLD=1048576    # Large file size (bytes, default 1MB)
+GIT_HOOK_DEBUG_CHECK=true                # Check for debug statements
+GIT_HOOK_DEBUG_CHECK_STRICT=false        # Block (true) or warn (false) on debug
 
-# Hooks deployment scope
-# Values: project | global
-# Default: project (deploy hooks per-repository via dotconfigs project git)
-# Warning: global scope sets core.hooksPath, overriding ALL per-project hooks
-GIT_HOOKS_SCOPE=project
+# ----------------------------------------------------------------------------
+# Commit-msg hook settings
+# ----------------------------------------------------------------------------
+GIT_HOOK_COMMIT_MSG_ENABLED=true         # Enable commit-msg hook
+GIT_HOOK_BLOCK_AI_ATTRIBUTION=true       # Block AI attribution in commits
+GIT_HOOK_WIP_BLOCK_ON_MAIN=true          # Block WIP commits on main branch
+GIT_HOOK_CONVENTIONAL_COMMITS=true       # Validate conventional commit format
+GIT_HOOK_CONVENTIONAL_COMMITS_STRICT=false  # Block (true) or warn (false)
+GIT_HOOK_MAX_SUBJECT_LENGTH=72           # Maximum subject line length
 
-# Pre-push protection level
-# Values: warn | block | off
-# Default: warn
-# - warn: show warning but allow force-push to protected branches
-# - block: prevent force-push to main/master entirely
-# - off: no pre-push checks
-GIT_HOOK_PREPUSH_PROTECTION=warn
+# ----------------------------------------------------------------------------
+# Pre-push hook settings
+# ----------------------------------------------------------------------------
+GIT_HOOK_PRE_PUSH_ENABLED=true           # Enable pre-push hook
+GIT_HOOK_BRANCH_PROTECTION=warn          # Protect main/master: block, warn, off
 
-# Enforce conventional commit messages
-# Values: true | false
-# Default: true
-# Format: type(scope): description
-# Types: feat, fix, docs, refactor, test, chore, perf, style
-GIT_HOOK_CONVENTIONAL_COMMITS=true
+# ----------------------------------------------------------------------------
+# Prepare-commit-msg hook settings
+# ----------------------------------------------------------------------------
+GIT_HOOK_PREPARE_COMMIT_MSG_ENABLED=true # Enable prepare-commit-msg hook
+GIT_HOOK_BRANCH_PREFIX=true              # Auto-prefix commit with branch name
+
+# ----------------------------------------------------------------------------
+# Post-merge hook settings
+# ----------------------------------------------------------------------------
+GIT_HOOK_POST_MERGE_ENABLED=true         # Enable post-merge hook
+GIT_HOOK_DEPENDENCY_CHECK=true           # Check for dependency changes
+GIT_HOOK_MIGRATION_REMINDER=true         # Remind about pending migrations
+
+# ----------------------------------------------------------------------------
+# Post-checkout hook settings
+# ----------------------------------------------------------------------------
+GIT_HOOK_POST_CHECKOUT_ENABLED=true      # Enable post-checkout hook
+GIT_HOOK_BRANCH_INFO=true                # Display branch info on checkout
+
+# ----------------------------------------------------------------------------
+# Post-rewrite hook settings
+# ----------------------------------------------------------------------------
+GIT_HOOK_POST_REWRITE_ENABLED=true       # Enable post-rewrite hook
+
+# ============================================================================
+# CLAUDE PLUGIN - Hook Configuration
+# ============================================================================
+
+# PreToolUse hook settings
+CLAUDE_HOOK_DESTRUCTIVE_GUARD=true       # Guard against destructive commands
+CLAUDE_HOOK_FILE_PROTECTION=true         # Protect critical files
+
+# PostToolUse hook settings
+CLAUDE_HOOK_RUFF_FORMAT=true             # Auto-format Python with Ruff
+
+# ============================================================================
+# DEPRECATED - Old Variable Names
+# ============================================================================
+# These variables have been renamed in v2.0:
+#
+# CLAUDE_GIT_* → GIT_*                   (Git plugin owns git config)
+# GIT_HOOK_PREPUSH_PROTECTION → GIT_HOOK_BRANCH_PROTECTION
+#
+# Update your .env file to use the new names above.
