fix(uat): deploy UX, wizard previews, content-change detection
- SCRIPT_DIR symlink resolution (bash 3.2 compatible)
- Setup simplified to PATH-only (removed deploy target)
- Deploy default changed to interactive (conflicts prompt)
- Deploy shows target paths in output
- Deploy creates both dotconfigs + dots PATH symlinks
- Content-change detection for CLAUDE.md and settings.json
- Settings.json moved to plugin directory (assembled there)
- CLAUDE.md exclusion: destination choice, "both" pattern fix
- Wizard preview support (? N) for sections/hooks/skills
- Git wizard: hook config default changed to .git/hooks/hooks.conf
- Git wizard: set -e crash fixed on conditional saves (|| true)
- Save confirmation message in both wizards

--- a/.gitignore
+++ b/.gitignore
@@ -12,5 +12,6 @@
 # Environment configuration (machine-specific)
 .env
 
-# Personal Claude settings (machine-specific)
+# Personal Claude settings (generated from template, machine-specific)
 settings.json
+plugins/claude/settings.json
