fix(deploy): symlink CLAUDE.md, content-change detection, force flag
- CLAUDE.md now symlinked (consistent with all other deployed files)
- Settings.json only created from template on first deploy (preserves edits)
- Content-change detection: shows Updated vs Unchanged for CLAUDE.md
- Fixed --force flag being overridden by --interactive
- Fixed PATH symlink dry-run reporting (shows Unchanged when correct)
- Fixed exclusion pattern display bug (legacy multiline .env value)
- Both dotconfigs + dots symlinks reported in deploy output

--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,7 @@
 # Environment configuration (machine-specific)
 .env
 
-# Personal Claude settings (generated from template, machine-specific)
+# Generated/assembled files (machine-specific, not tracked)
 settings.json
 plugins/claude/settings.json
+plugins/claude/CLAUDE.md
