refactor: global config refactor + CLI improvements
Global config:
- Replace .env.example with global.json.example pattern
- Move gitignore_global → plugins/git/global-excludes
- Add plugins/git/gitconfig for git configuration
- Initialize global.json from example in setup
- Add global.json to .gitignore

CLI improvements:
- Make project path optional (defaults to CWD)
- Add "project init" as alias for "project-init"
- Add explicit output for .git/info/exclude updates
- Update help text to reflect optional path parameter

Hook fixes:
- Fix bash 3.2 compatibility issues in hooks
- Update block-destructive hook logic
- Improve post-tool-format hook
- Refine hook configuration templates

Planning & docs:
- Add phase 11 UAT documentation
- Archive v4-v3 planning backup
- Add quick task planning docs
- Update codebase documentation

Tests:
- Add pytest configuration
- Add CLI tests
- Add deploy engine tests
- Add project command tests

--- a/settings.json
+++ b/settings.json
@@ -14,39 +14,36 @@
   "hooks": {
     "PreToolUse": [
       {
-        "matchers": [
+        "matcher": "Bash",
+        "hooks": [
           {
-            "tool_name": "Bash"
+            "type": "command",
+            "command": "$CLAUDE_PROJECT_DIR/plugins/claude/hooks/block-destructive.sh",
+            "timeout": 10
           }
-        ],
-        "command": "$CLAUDE_PROJECT_DIR/plugins/claude/hooks/block-destructive.sh",
-        "timeout": 10000
+        ]
       },
       {
-        "matchers": [
+        "matcher": "Write|Edit",
+        "hooks": [
           {
-            "tool_name": "Write"
-          },
-          {
-            "tool_name": "Edit"
+            "type": "command",
+            "command": "$CLAUDE_PROJECT_DIR/plugins/claude/hooks/block-destructive.sh",
+            "timeout": 10
           }
-        ],
-        "command": "$CLAUDE_PROJECT_DIR/plugins/claude/hooks/block-destructive.sh",
-        "timeout": 10000
+        ]
       }
     ],
     "PostToolUse": [
       {
-        "matchers": [
+        "matcher": "Write|Edit",
+        "hooks": [
           {
-            "tool_name": "Write"
-          },
-          {
-            "tool_name": "Edit"
+            "type": "command",
+            "command": "$CLAUDE_PROJECT_DIR/plugins/claude/hooks/post-tool-format.py",
+            "timeout": 30
           }
-        ],
-        "command": "$CLAUDE_PROJECT_DIR/plugins/claude/hooks/post-tool-format.py",
-        "timeout": 30000
+        ]
       }
     ]
   }
