--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,7 @@
 
 # Environment configuration (machine-specific)
 .env
+global.json
 
 # Generated/assembled files (machine-specific, not tracked)
 settings.json
