--- a/plugins/git/manifest.json
+++ b/plugins/git/manifest.json
@@ -1,5 +1,11 @@
 {
   "global": {
+    "hooks": {
+      "source": "plugins/git/hooks",
+      "target": "~/.dotconfigs/git-hooks",
+      "method": "symlink",
+      "include": ["commit-msg", "post-checkout", "post-merge", "post-rewrite", "pre-commit", "pre-push", "prepare-commit-msg"]
+    },
     "config": {
       "source": "plugins/git/templates/gitconfig",
       "target": "~/.gitconfig",
