--- a/plugins/git/manifest.json
+++ b/plugins/git/manifest.json
@@ -18,15 +18,15 @@
     }
   },
   "project": {
-    "hooks": {
+    "hooks": { 
       "source": "plugins/git/hooks",
       "target": ".git/hooks",
       "method": "symlink",
       "include": ["commit-msg", "post-checkout", "post-merge", "post-rewrite", "pre-commit", "pre-push", "prepare-commit-msg"],
       "exclude": []
     },
-    "exclude-patterns": {
-      "source": "plugins/git/templates/project-exclude-patterns",
+    "project-excludes": {
+      "source": "plugins/git/templates/project-excludes",
       "target": ".git/info/exclude",
       "method": "copy"
     },
