refactor: simplify hooks, remove config layer, reorganise structure
- Strip git hooks to minimal opinionated versions (no config hierarchy)
- Add lightweight secrets detection and main-branch warning to pre-commit
- Delete lib/config.sh, settings.json, post-tool-format.py (unused)
- Move project-agents/ into plugins/claude/agents/
- Add pre-rebase hook, hook templates, plugin READMEs
- Rewrite CLAUDE.md as project reference, add QUICKSTART.md
- Update global.json path to .dotconfigs/global.json
- Fix tty reads in init.sh for non-interactive contexts
- Add runtime integration tests derived from manifests
- Update generate-roster.sh, tests, and manifests

--- a/plugins/git/manifest.json
+++ b/plugins/git/manifest.json
@@ -4,7 +4,7 @@
       "source": "plugins/git/hooks",
       "target": "~/.dotconfigs/git-hooks",
       "method": "symlink",
-      "include": ["commit-msg", "post-checkout", "post-merge", "post-rewrite", "pre-commit", "pre-push", "prepare-commit-msg"]
+      "include": ["commit-msg", "post-checkout", "post-merge", "post-rewrite", "pre-commit", "pre-push", "pre-rebase", "prepare-commit-msg"]
     },
     "config": {
       "source": "plugins/git/templates/gitconfig",
@@ -22,7 +22,7 @@
       "source": "plugins/git/hooks",
       "target": ".git/hooks",
       "method": "symlink",
-      "include": ["commit-msg", "post-checkout", "post-merge", "post-rewrite", "pre-commit", "pre-push", "prepare-commit-msg"],
+      "include": ["commit-msg", "post-checkout", "post-merge", "post-rewrite", "pre-commit", "pre-push", "pre-rebase", "prepare-commit-msg"],
       "exclude": [] 
     },
     "project-excludes": {
