fix(git): use append method for project-excludes in manifest
Ensures dotconfigs project-init scaffolds project.json with append
semantics for .git/info/exclude, so local additions survive future
syncs rather than being overwritten.

--- a/plugins/git/manifest.json
+++ b/plugins/git/manifest.json
@@ -28,7 +28,7 @@
     "project-excludes": {
       "source": "plugins/git/templates/project-excludes",
       "target": ".git/info/exclude",
-      "method": "copy"
+      "method": "append"
     },
     "gitignore": {
       "source": "plugins/git/templates/gitignore-default",
